add readme for ts

--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ali/tea-fileform",
-  "version": "1.1.2",
+  "name": "@alicloud/tea-fileform",
+  "version": "1.0.0",
   "description": "",
   "main": "dist/client.js",
   "types": "dist/client.d.ts",
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "git@github.com:aliyun/tea-fileform.git"
   },
-  "license": "ISC",
+  "license": "Apache-2.0",
   "scripts": {
     "test": "mocha -r ts-node/register -r source-map-support/register test/**/*.spec.ts",
     "test-cov": "nyc -e .ts -r=html -r=text -r=lcov npm run test",
