--- a/csharp/tests/tests.csproj
+++ b/csharp/tests/tests.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\core\fileform.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="test.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
