tea-fileform for php

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,21 @@ jobs:
       os: osx
       osx_image: xcode11.3
       env: TEA_UTIL_ENV="swift"
+      - language: php
+      php: '5.6'
+      env: TEA_UTIL_ENV="php"
+    - language: php
+      php: '7.0'
+      env: TEA_UTIL_ENV="php"
+    - language: php
+      php: '7.1'
+      env: TEA_UTIL_ENV="php"
+    - language: php
+      php: '7.2'
+      env: TEA_UTIL_ENV="php"
+    - language: php
+      php: '7.3'
+      env: TEA_UTIL_ENV="php"
 
 script:
   - bash ut.sh ${TEA_UTIL_ENV}
