--- a/php/composer.json
+++ b/php/composer.json
@@ -2,7 +2,7 @@
   "name": "alibabacloud/tea-fileform",
   "description": "Aliyun Tea File Library for PHP",
   "type": "library",
-  "license": "Apache 2.0",
+  "license": "Apache-2.0",
   "authors": [
     {
       "name": "Alibaba Cloud SDK",
@@ -21,12 +21,12 @@
   },
   "autoload": {
     "psr-4": {
-      "AlibabaCloud\\Tea\\": "src"
+      "AlibabaCloud\\Tea\\FileForm\\": "src"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "AlibabaCloud\\Tea\\Tests\\": "tests"
+      "AlibabaCloud\\Tea\\FileForm\\Tests\\": "tests"
     }
   },
   "scripts": {
