change orgs name

--- a/php/composer.json
+++ b/php/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "alibabacloud/tea-fileform",
-  "description": "Aliyun Tea File Library for PHP",
+  "description": "Alibaba Cloud Tea File Library for PHP",
   "type": "library",
   "license": "Apache-2.0",
   "authors": [
