--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jobs:
       os: osx
       osx_image: xcode11.3
       env: TEA_UTIL_ENV="swift"
-      - language: php
+    - language: php
       php: '5.6'
       env: TEA_UTIL_ENV="php"
     - language: php
@@ -32,6 +32,21 @@ jobs:
     - language: php
       php: '7.3'
       env: TEA_UTIL_ENV="php"
+    - language: python
+      python: 3.4
+      env: TEA_UTIL_ENV="python"
+    - language: python
+      python: 3.5
+      env: TEA_UTIL_ENV="python"
+    - language: python
+      python: 3.6
+      env: TEA_UTIL_ENV="python"
+    - language: python
+      python: 3.7
+      env: TEA_UTIL_ENV="python"
+    - language: python
+      python: 3.8
+      env: TEA_UTIL_ENV="python"
 
 script:
   - bash ut.sh ${TEA_UTIL_ENV}
