--- a/php/composer.json
+++ b/php/composer.json
@@ -11,13 +11,10 @@
   ],
   "require": {
     "php": ">5.5",
-    "adbario/php-dot-notation": "^2.2",
-    "alibabacloud/tea": "^3.0",
-    "guzzlehttp/guzzle": "^6.5|^7.0"
+    "alibabacloud/tea": "^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8.35|^5.4.3",
-    "symfony/var-dumper": "^5.0"
+    "phpunit/phpunit": "^4.8.35|^5.4.3"
   },
   "autoload": {
     "psr-4": {
