Fix unsupported operand type(s) for %

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,12 @@ jobs:
       python: 2.7
       env: TEA_UTIL_ENV="python2"
     - language: python
+      python: 3.4
+      env: TEA_UTIL_ENV="python2"
+    - language: python
+      python: 3.5
+      env: TEA_UTIL_ENV="python2"
+    - language: python
       python: 3.6
       env: TEA_UTIL_ENV="python"
     - language: python
